keycloak/deployments/deployment.yml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: team-projekt-kkk-keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: team-projekt-kkk-keycloak
  template:
    metadata:
      labels:
        app: team-projekt-kkk-keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:26.4.6
        args: ["start-dev"]
        securityContext:
          runAsUser: 0
          runAsGroup: 0
          allowPrivilegeEscalation: false
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: keycloak-persistent-storage
          mountPath: /opt/keycloak/data
      volumes:
      - name: keycloak-persistent-storage
        persistentVolumeClaim:
          claimName: keycloak-pvc
